src/snapshots/tptp__fof__tests__fof_formula-3.snap
---
source: src/fof.rs
expression: parsed
---
Formula(
    Unary(
        Unary(
            UnaryConnective,
            Unary(
                Unary(
                    UnaryConnective,
                    Unitary(
                        Atomic(
                            Plain(
                                PlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "p",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
