src/snapshots/tptp__fof__tests__fof_formula-7.snap
---
source: src/fof.rs
expression: parsed
---
Formula(
    Binary(
        Assoc(
            Or(
                OrFormula(
                    [
                        Unitary(
                            Atomic(
                                Defined(
                                    Plain(
                                        DefinedPlainFormula(
                                            Constant(
                                                DefinedConstant(
                                                    DefinedFunctor(
                                                        AtomicDefinedWord(
                                                            DollarWord(
                                                                LowerWord(
                                                                    "true",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                        Unitary(
                            Atomic(
                                Defined(
                                    Plain(
                                        DefinedPlainFormula(
                                            Constant(
                                                DefinedConstant(
                                                    DefinedFunctor(
                                                        AtomicDefinedWord(
                                                            DollarWord(
                                                                LowerWord(
                                                                    "false",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ),
)
