src/snapshots/tptp__fof__tests__fof_function_term-3.snap
---
source: src/fof.rs
expression: parsed
---
Defined(
    Atomic(
        DefinedAtomicTerm(
            Constant(
                DefinedConstant(
                    DefinedFunctor(
                        AtomicDefinedWord(
                            DollarWord(
                                LowerWord(
                                    "defined",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
