src/snapshots/tptp__fof__tests__fof_function_term-5.snap
---
source: src/fof.rs
expression: parsed
---
System(
    Constant(
        SystemConstant(
            SystemFunctor(
                AtomicSystemWord(
                    DollarDollarWord(
                        LowerWord(
                            "system",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
