src/snapshots/tptp__fof__tests__fof_function_term.snap
---
source: src/fof.rs
expression: parsed
---
Plain(
    Function(
        Functor(
            Lower(
                LowerWord(
                    "f",
                ),
            ),
        ),
        Arguments(
            [
                Variable(
                    Variable(
                        UpperWord(
                            "X",
                        ),
                    ),
                ),
            ],
        ),
    ),
)
