src/snapshots/tptp__fof__tests__fof_logic_formula-11.snap
---
source: src/fof.rs
expression: parsed
---
Binary(
    Nonassoc(
        BinaryNonassoc {
            left: Unary(
                Unary(
                    UnaryConnective,
                    Unitary(
                        Atomic(
                            Plain(
                                PlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "p",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            op: LRImplies,
            right: Unitary(
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "q",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ),
)
