src/snapshots/tptp__fof__tests__fof_logic_formula-5.snap
---
source: src/fof.rs
expression: parsed
---
Binary(
    Assoc(
        And(
            AndFormula(
                [
                    Unitary(
                        Atomic(
                            Plain(
                                PlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "p",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Unitary(
                        Atomic(
                            Plain(
                                PlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "q",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
